--- a/app/src/main/res/layout/activity_pagination.xml
+++ b/app/src/main/res/layout/activity_pagination.xml
@@ -11,10 +11,19 @@
         android:layout_gravity="center_horizontal|top" />
 
     <Button
-        android:layout_width="20dp"
-        android:layout_height="20dp"
-        android:id="@+id/button"
-        android:layout_gravity="left|top" />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/left_button"
+        android:background="@drawable/left_arrow"
+        android:layout_gravity="center_vertical" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/right_button"
+        android:background="@drawable/right_arrow"
+        android:layout_gravity="center_vertical|end"
+        />
 </FrameLayout>
 
 
